[workspace]
members = [
    "fedimintd",
    "fedimint-cli",
    "fedimint-prediction-markets-common",
    "fedimint-prediction-markets-client",
    "fedimint-prediction-markets-server",
    "fedimint-prediction-markets-tests",
]
resolver = "2"

[workspace.metadata]
authors = ["The Fedimint Developers"]
edition = "2021"
description = "Fedimint compiled with custom module set"
documentation = "https://github.com/fedimint/fedimint-custom-modules-example"
readme = "README.md"
homepage = "https://github.com/fedimint/fedimint-custom-modules-example"
repository = "https://github.com/fedimint/fedimint-custom-modules-example"
license-file = "LICENSE"
keywords = ["bitcoin", "lightning", "chaumian", "e-cash", "federated"]

[workspace.dependencies]
anyhow = "1.0.86"
async-stream = "0.3.6"
async-trait = "0.1.80"
erased-serde = "0.4"
futures = "0.3.30"
rand = "0.8.5"
secp256k1 = "0.27.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.132" }
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full", "tracing"] }
tracing = "0.1.40"

prediction-market-event = "0.14.0"
prediction-market-event-nostr-client = "0.2.0"

# Fedimint dependencies
aead = { git = "https://github.com/fedimint/fedimint", tag = "v0.4.4" }
devimint = { git = "https://github.com/fedimint/fedimint", tag = "v0.4.4" }
fedimint-api-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.4.4" }
fedimint-cli = { git = "https://github.com/fedimint/fedimint", tag = "v0.4.4" }
fedimint-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.4.4" }
fedimint-core = { git = "https://github.com/fedimint/fedimint", tag = "v0.4.4" }
fedimint-dummy-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.4.4" }
fedimint-dummy-server = { git = "https://github.com/fedimint/fedimint", tag = "v0.4.4" }
fedimint-logging = { git = "https://github.com/fedimint/fedimint", tag = "v0.4.4" }
fedimint-server = { git = "https://github.com/fedimint/fedimint", tag = "v0.4.4" }
fedimint-testing = { git = "https://github.com/fedimint/fedimint", tag = "v0.4.4" }
fedimintd = { git = "https://github.com/fedimint/fedimint", tag = "v0.4.4" }
tbs = { git = "https://github.com/fedimint/fedimint", tag = "v0.4.4" }

# Comment above lines and uncomment these to work with local fedimint dependencies
# fedimintd = { path = "../fedimint/fedimintd" }
# fedimint-cli = { path = "../fedimint/fedimint-cli" }
# fedimint-core = { path = "../fedimint/fedimint-core" }
# fedimint-client = { path = "../fedimint/fedimint-client" }
# fedimint-logging = { path = "../fedimint/fedimint-logging" }
# devimint = { path = "../fedimint/devimint" }

[profile.dev]
split-debuginfo = "packed"

# in dev mode optimize crates that are perf-critical (usually just crypto crates)
[profile.dev.package]
bitcoin_hashes = { opt-level = 3 }
bls12_381 = { opt-level = 3 }
byteorder = { opt-level = 3 }
ff = { opt-level = 3 }
group = { opt-level = 3 }
pairing = { opt-level = 3 }
rand_core = { opt-level = 3 }
ring = { opt-level = 3 }
secp256k1 = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
secp256k1-zkp = { opt-level = 3 }
secp256k1-zkp-sys = { opt-level = 3 }
subtle = { opt-level = 3 }
threshold_crypto = { opt-level = 3 }
zeroize = { opt-level = 3 }
