[package]
name = "fedimint-cli-custom"
version = "0.2.1"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-cli with custom module set"

[[bin]]
name = "fedimint-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
fedimint-cli = { workspace = true }
fedimint-prediction-markets-client = { path = "../fedimint-prediction-markets-client" }
tokio = { version = "1.25.0", features = ["full", "tracing"] }
