[package]
name = "fedimint-cli-custom"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-cli with custom module set"

[[bin]]
name = "fedimint-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { version = "1.25.0", features = ["full", "tracing"] }

# Fedimint dependencies
fedimint-core = { workspace = true }
fedimint-cli = { workspace = true }
fedimint-prediction-markets-client = { path = "../fedimint-prediction-markets-client" }

[build-dependencies]
fedimint-build = { git = "https://github.com/fedimint/fedimint" }