[package]
name = "fedimint-prediction-markets-client"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-dummy is a dummy example fedimint module."
license = "MIT"

[lib]
name = "fedimint_prediction_markets_client"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
anyhow = { workspace = true }
futures = "0.3.30"
erased-serde = "0.4"
rand = "0.8.5"
secp256k1 = "0.24.2"
serde = {version = "1.0.149", features = [ "derive" ] }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
tracing = "0.1.37"
thiserror = "1.0.39"
bitcoin = "0.29.2"
async-stream = "0.3.5"
tokio = { version = "1.26.0", features = ["sync"] }

# Fedimint dependencies
fedimint-core = { workspace = true }
fedimint-client = { workspace = true }
fedimint-prediction-markets-common = { path = "../fedimint-prediction-markets-common" }

[build-dependencies]
fedimint-build = { git = "https://github.com/fedimint/fedimint" }