[package]
name = "fedimint-prediction-markets-client"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-dummy is a dummy example fedimint module."
license = "MIT"

[features]
default = []
cli = ["dep:clap","dep:serde_json"]

[lib]
name = "fedimint_prediction_markets_client"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
erased-serde = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
prediction-market-event = { workspace = true }

# Cli deps
clap = { version = "4.5.18", optional = true }
serde_json = { workspace = true, optional = true }

# Fedimint dependencies
fedimint-core = { workspace = true }
fedimint-client = { workspace = true }
fedimint-prediction-markets-common = { path = "../fedimint-prediction-markets-common" }

[build-dependencies]
fedimint-build = { git = "https://github.com/fedimint/fedimint" }
