[package]
name = "fedimint-prediction-markets-common"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-dummy is a dummy example fedimint module."
license = "MIT"

[lib]
name = "fedimint_prediction_markets_common"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
bitcoin_hashes = "0.11.0"
erased-serde = "0.4"
futures = "0.3.30"
rand = "0.8"
serde = { version = "1.0.149", features = [ "derive" ] }
secp256k1 = "0.24.2"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.39"
tracing = "0.1.37"
js-sys = "0.3.64"

# Fedimint dependencies
fedimint-core = { workspace = true }


