[package]
name = "fedimint-prediction-markets-common"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-dummy is a dummy example fedimint module."
license = "MIT"

[lib]
name = "fedimint_prediction_markets_common"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
erased-serde = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
secp256k1 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
prediction-market-event = { workspace = true }
js-sys = "0.3.64"

# Fedimint dependencies
fedimint-core = { workspace = true }


