[package]
name = "fedimint-prediction-markets-server"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-dummy is a dummy example fedimint module."
license = "MIT"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "fedimint_prediction_markets_server"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.73"
bitcoin_hashes = "0.11.0"
erased-serde = "0.4"
futures = "0.3.30"
rand = "0.8"
serde = { version = "1.0.149", features = [ "derive" ] }
secp256k1 = "0.24.2"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.39"
tracing = "0.1.37"
tokio = { version = "1.26.0", features = ["sync"] }

# Fedimint dependencies
fedimint-core = { workspace = true }
fedimint-server = { workspace = true }
fedimint-prediction-markets-common = { path = "../fedimint-prediction-markets-common" }


