[package]
name = "fedimint-prediction-markets-tests"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-dummy is a dummy example fedimint module."
license = "MIT"
publish = false

[[test]]
name = "fedimint_prediction_markets_tests"
path = "tests/tests.rs"

[dependencies]
anyhow = "1.0.66"
fedimint-client = { workspace = true }
fedimint-core = { workspace = true }
fedimint-prediction-markets-client = { path = "../fedimint-prediction-markets-client" }
fedimint-prediction-markets-common = { path = "../fedimint-prediction-markets-common" }
fedimint-prediction-markets-server = { path = "../fedimint-prediction-markets-server" }
fedimint-logging = { workspace = true }
fedimint-server = { workspace = true }
fedimint-testing = { workspace = true }
rand = "0.8"
secp256k1 = "0.24.2"
tokio = { version = "1.26.0", features = ["sync"] }
tracing = "0.1.37"

[dev-dependencies]
# threshold_crypto = { workspace = true }
