[package]
name = "fedimint-prediction-markets-tests"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-dummy is a dummy example fedimint module."
license = "MIT"
publish = false

[[test]]
name = "fedimint_prediction_markets_tests"
path = "tests/tests.rs"

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
prediction-market-event = { workspace = true }
prediction-market-event-nostr-client = { workspace = true }

# Fedimint dependencies
fedimint-client = { workspace = true }
fedimint-logging = { workspace = true }
fedimint-server = { workspace = true }
fedimint-testing = { workspace = true }
fedimint-core = { workspace = true }
fedimint-prediction-markets-client = { path = "../fedimint-prediction-markets-client" }
fedimint-prediction-markets-common = { path = "../fedimint-prediction-markets-common" }
fedimint-prediction-markets-server = { path = "../fedimint-prediction-markets-server" }
fedimint-dummy-client = { workspace = true }
fedimint-dummy-server = { workspace = true }
