[package]
name = "fedimintd-custom"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimintd with custom module set"

[[bin]]
name = "fedimintd"
path = "src/fedimintd.rs"

[dependencies]
anyhow = "1.0.66"
fedimintd = { workspace = true }
tokio = { version = "1.25.0", features = ["full", "tracing"] }
fedimint-prediction-markets-server = { path = "../fedimint-prediction-markets-server" }
fedimint-prediction-markets-common = { path = "../fedimint-prediction-markets-common" }
fedimint-core = { workspace = true }

[build-dependencies]
fedimint-build = { git = "https://github.com/fedimint/fedimint" }