[package]
name = "fedimintd-custom"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimintd with custom module set"

[[bin]]
name = "fedimintd"
path = "src/fedimintd.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }

# Fedimint dependencies
fedimint-core = { workspace = true }
fedimintd = { workspace = true }
fedimint-prediction-markets-server = { path = "../fedimint-prediction-markets-server" }
fedimint-prediction-markets-common = { path = "../fedimint-prediction-markets-common" }

[build-dependencies]
fedimint-build = { git = "https://github.com/fedimint/fedimint" }